18 November 2008: Wouter
	- iana portlist updated.
	- removed cast in unit test debug print that was not 64bit safe.
	- trunk back to 1.1.0; copied to tags 1.1.0 release.
	- trunk to has version number 1.1.1 again.
	- in 1.1.1; make clean nicer. grammar in manpage.

17 November 2008: Wouter
	- theoretical fix for problems reported on mailing list.
	  If a delegation point has no A but only AAAA and do-ip6 is no,
	  resolution would fail. Fixed to ask for the A and AAAA records.
	  It has to ask for both always, so that it can fail quietly, from
	  TLD perspective, when a zone is only reachable on one transport.
	- test for above, only AAAA and doip6 is no. Fix causes A record
	  for nameserver to be fetched.
	- fixup address duplication on cache fillup for delegation points.
	- testset updated for new query answer requirements.

14 November 2008: Wouter
	- created 1.1.0 release tag in svn.
	- trunk moved to 1.1.1
	- fixup unittest-neg for locking.

13 November 2008: Wouter
	- added fedora init and specfile to contrib (by Paul Wouters).
	- added configure check for ldns 1.4.0 (using its compat funcs).
	- neater comments in worker.h.
	- removed doc/plan and updated doc/TODO.
	- silenced EHOSTDOWN (verbosity 2 or higher to see it).
	- review comments from Jelte, Matthijs. Neater code.

12 November 2008: Wouter
	- add unbound-control manpage to makedist replace list.

11 November 2008: Wouter
	- unit test for negative cache, stress tests the refcounting.
	- fix for refcounting error that could cause fptr_wlist fatal exit
	  in the negative cache rbtree (upcoming 1.1 feature). (Thanks to 
	  Attila Nagy for testing).
	- nicer comments in cachedump about failed RR to string conversion.
	- fix 32bit wrap around when printing large (4G and more) mem usage
	  for extended statistics.

10 November 2008: Wouter
	- fixup the getaddrinfo compat code rename.

8 November 2008: Wouter
	- added configure check for eee build warning.

7 November 2008: Wouter