@@ -337,8 +337,11 @@ perform_setup(struct daemon* daemon, struct config_file* cfg, int debug_mode,
 
 	/* init syslog (as root) if needed, before daemonize, otherwise
 	 * a fork error could not be printed since daemonize closed stderr.*/
-	if(cfg->use_syslog)
+	if(cfg->use_syslog) {
 		log_init(cfg->logfile, cfg->use_syslog, cfg->chrootdir);
+		/* but syslog is not really opened by glibc until first msg */
+		log_info("open syslog, startup in progress");
+	}
 	/* if using a logfile, we cannot open it because the logfile would
 	 * be created with the wrong permissions, we cannot chown it because
 	 * we cannot chown system logfiles, so we do not open at all.
